# lunabotics

./: .gitignore  README.md
Documentation/: DRIVERSTATION.md  Libraries  gstreamer  motors  packets.txt
DriverStation/: camera.py  ds.py  gui.py  imgui.ini  networking.py  requirements.txt  test.py  window.py
DriverStation/Old/: controller.py  controllerv2.py
DriverStation/web/: index.html
FeatherCode/: AS5600.cpp  FeatherCode.ino
HAL/: FRC_CAN.c  FRC_CAN.h  HAL.h  HAL.ino  Makefile  README.md  SPARK_MAX.c  SPARK_MAX.h
HAL/CAN/: FRC_CAN.c  FRC_CAN.h
HAL/SparkMax/: SPARK_MAX.c  SPARK_MAX.h
HAL/test/: CANTest.c
PiCode/: .clang-format  deploy-all.sh  deploy.sh  meson.build
PiCode/include/: communicator.h  communicatorSM.h  driverStation.h  robotActuation.h  robotControl.h  robotState.h  structs.h  util.h
PiCode/src/: communicator.cpp  communicatorSM.cpp  driverStation.cpp  main.cpp  robotActuation.cpp  robotControl.cpp  robotState.cpp
PiCode/subprojects/: asio.wrap
PiResources/: mediamux.yml  robotcode.service
RobotCode/: .clang-format  README.md  install.sh  meson.build
RobotCode/Calibration/: cameraTest.py
RobotCode/Calibration/images/: cameraTest.py
RobotCode/include/: logger.h  robotActuation.h  robotVision.h
RobotCode/src/: driverStation.cpp  main.cpp  robotControl.cpp  robotState.cpp  robotVision.cpp  util.cpp
TestScripts/: motor_test.py  serial_test.py
